--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,7 +5,7 @@
   <% @post.comments.each do |comment| %>
     <p><%= comment.content %></p>
     <span class='votes'><%= comment.votes %></span>
-    <% if @current_user %>
+    <% if current_user %>
       <a class='vote' href='/comment/<%= comment.id %>/vote'>Vote</a>
     <% end %>
     <p><%= comment.user.username %></p>
