added sessions controller, user can sign in and out

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <% if current_user %>
+    <%= link_to "Sign Out", signout_path, method: :delete %>
+    <a href='/users/<%= current_user.id%>'>Profile</a>
+  <%else%> 
+    <a href='/signup'>Sign Up</a>
+    <a href='/signin'>Log In</a>
+  <%end%>
 
 <%= yield %>
 
